--- a/pom.xml
+++ b/pom.xml
@@ -80,6 +80,13 @@
             <version>${junit-version}</version>
             <scope>test</scope>
         </dependency>
+
+        <dependency>
+        <groupId>org.projectlombok</groupId>
+        <artifactId>lombok</artifactId>
+        <version>1.16.20</version>
+        </dependency>
+
     </dependencies>
 
 
