添加私服地址方便上传打包

--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>com.yingyinglicai.yingghuo</groupId>
     <artifactId>loan-api-java-sdk</artifactId>
-    <version>1.0.0-SNAPSHOT</version>
+    <version>1.0.0</version>
 
     <properties>
         <java.version>1.6</java.version>
@@ -86,8 +86,22 @@
         <artifactId>lombok</artifactId>
         <version>1.16.20</version>
         </dependency>
-
     </dependencies>
 
+    <repositories>
+        <repository>
+            <id>yylc-dev</id>
+            <url>http://10.100.5.141:8081/content/repositories/yylc-dev</url>
+            <releases>
+                <enabled>true</enabled>
+            </releases>
+        </repository>
+    </repositories>
+    <distributionManagement>
+        <repository>
+            <id>yylc-dev</id>
+            <url>http://10.100.5.141:8081/content/repositories/yylc-dev</url>
+        </repository>
+    </distributionManagement>
 
 </project>
