--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,18 @@
     <groupId>com.yingyinglicai.yingghuo</groupId>
     <artifactId>loan-api-java-sdk</artifactId>
     <version>1.0.0</version>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>8</source>
+                    <target>8</target>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 
     <properties>
         <java.version>1.6</java.version>
